# gencol_ot

./: flake.nix  gencol.ipynb  gencol.py  main.ipynb  pyproject.toml  requirements.txt  shell.nix
examples/: helium_atom.ipynb  mode-20-electrons.ipynb
