[tool.poetry]
name = "gencol"
version = "0.1.0"
description = ""
authors = ["Ivan <aipyth.func@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
tqdm = "^4.66.4"
notebook = "^7.2.1"
pulp = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
